For 1.20.3
	- Javascripts - evenOuts (outputOnlys) were generating an event on startup; value was "zero".
	  changed so values initialized, but not "touched", so will not generate initial events.
	  Fields will still generate an initial event, so that field values will be reflected in X3D scene
	  graph.

	- Elevation Grid colors were not working after an earlier texture change; should now
	  work. (affected other polyrep structures, too)
	- OSX plugin change to better handle Anchor to non-x3d pages when running within Safari.

	- OSX - when running non-embedded; will use default browser for html pages, rather than defaulting
	  to Safari.

	- tests  directory, tests/20.wrl changed to show material transparency affecting solid texture.

	- VRML Parser - morphing SF types into MF types (where an MF was expected, but an SF
	  was given) was not correct for SF types with a size > 1 float, eg SFColors. 

	- EAI SF/MFString set/get reworked.
	- EAI setting one value of MF/SF nodes did not work.
	- EAI setting MFStrings had code that could cause memory problems.
	- EAI creating EventInMFVec3f did not work - error in java code Node.java.
	- EAI child to parent link error caused potential loss of node functionality if a removeChild
	  	node was called on a sibling node.

For 1.20.2
	- adjusted the OcclusionCulling parameters to better handle nodes with few pixels
	  visible.

	- Linux Firefox/Opera/Icecape/Mozilla plugin - reworked to prevent a possible
	  synchronization problem at plugin startup.

	- Makefile.PL automatically determines whether we are building on a 64 or 32 bit
	  Linux system, and adjusts build/install paths to suit.

	- ReWire and MIDI nodes on OSX - code now works on OSX 10.5.

	- OSX SoundEngine now detects FreeWRL abnormal shutdowns, and will send a message
	  to the console, and terminate execution.

	- Javascript "initialize()" - if parsing was required (eg, createVrmlFromString)